@@ -8,6 +8,7 @@ Version 0.7.0~dev
 	* Add gop_size option to transcode action.
 	* Support more DNxHD transcoding profiles in ffmpeg worker.
 	* Add interlaced option to transcode action.
+	* Add closed_gop option to MPEG2/XDCAMHD transcoding profiles.
 
 Version 0.6.0 Released on 2012/08/06
 
